Fixed two variations in one row alignment

--- a/stripe-payments/public/views/templates/default/pp-style.css
+++ b/stripe-payments/public/views/templates/default/pp-style.css
@@ -56,6 +56,14 @@ body {
 	background: rgba(255, 255, 255, .3);
 }
 
+#variations-cont .variation:nth-child(odd) fieldset {
+	margin-right: 4%;
+}
+
+#variations-cont .variation:nth-child(even) fieldset {
+	margin-left: 4%;
+}
+
 #Aligner-item.popup-show {
 	height: auto;
 	overflow: visible;
@@ -290,6 +298,15 @@ input.pure-input-1.has-icon, select.pure-input-1.has-icon {
 }
 
 @media screen and (max-width: 48em) {
+
+	#variations-cont .variation:nth-child(odd) fieldset {
+		margin-right: 0;
+	}
+	
+	#variations-cont .variation:nth-child(even) fieldset {
+		margin-left: 0;
+	}
+
 	#test-mode {
 		top: 5px;
 		right: auto;
